--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title></title>
 <style>
-  html,body{
+html,body{
   margin:0;
   padding:0;
   height: 100%;
@@ -46,12 +46,11 @@ main{
   color:white;
   font-size:30px;
 }
-
 </style>
 </head>
 <body>
 <!-- Paste your HTML code here -->
-<header>hello</header>
+<header>Hello</header>
  
 <content> 
 <aside>
@@ -60,12 +59,11 @@ main{
       <li>Seth</li>
   </aside>
   <div class='main'>
-    <main>hello</main>
-<footer>go away</footer>
+    <main>hi</main>
+<footer><a href="/">go away</a>
+    </footer>
   </div>
-</content>  
-  
-<script>
+</content>
 // Paste your JavaScript code here
   
 </script>
